# lineGPT

./: .gitignore  app.py  pyproject.toml
