[tool.poetry]
name = "linegpt"
version = "0.1.0"
description = ""
authors = ["Shane Chang <kxykxyou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
openai = "^0.26.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
